# UnrealEngine57

./: .gitignore  AGENTS.md  UPSTREAM.md
EnrealEngine/Project/RenderingPractice/: RenderingPractice.uproject
EnrealEngine/Project/RenderingPractice/Config/: DefaultEngine.ini  DefaultGame.ini
EnrealEngine/Project/RenderingPractice/Source/: RenderingPractice.Target.cs  RenderingPracticeEditor.Target.cs
EnrealEngine/Project/RenderingPractice/Source/RenderingPractice/: RenderingPractice.Build.cs  RenderingPractice.cpp
EnrealEngine/UnrealEngine/: .gitattributes  .gitignore  AGENTS.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  Setup.bat  Setup.sh
EnrealEngine/UnrealEngine/.claude/skills/renderingdeep-doc-teaching-editor/: SKILL.md
EnrealEngine/UnrealEngine/.codex/skills/build-unreal-engine/: SKILL.md
EnrealEngine/UnrealEngine/.codex/skills/renderingdeep-doc-producer/: SKILL.md
EnrealEngine/UnrealEngine/.codex/skills/renderingdeep-doc-reviewer/: SKILL.md
EnrealEngine/UnrealEngine/.codex/skills/renderingpractice-doc-improver/: SKILL.md
EnrealEngine/UnrealEngine/Engine/Config/: BaseDeviceProfiles.ini  BaseEditor.ini  BaseEditorPerProjectUserSettings.ini  BaseEditorSettings.ini  BaseEngine.ini  BaseGame.ini  BaseHardware.ini  BaseInput.ini  BaseInstallBundle.ini  BaseMaterialExpressions.ini  BaseScalability.ini  BaseUnrealInsightsSettings.ini  ConfigRedirects.ini  ConsoleVariables.ini
EnrealEngine/UnrealEngine/Engine/Config/Android/: AndroidEmulator.json  AndroidEngine.ini  AndroidScalability.ini  Android_SDK.json  BaseAndroidEngine.ini  BaseAndroidInput.ini  DataDrivenPlatformInfo.ini
EnrealEngine/UnrealEngine/Engine/Config/Apple/: Apple_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/IOS/: BaseIOSEngine.ini  BaseIOSInput.ini  BaseIOSInstallBundle.ini  DataDrivenPlatformInfo.ini  IOSScalability.ini  IOS_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/Linux/: BaseLinuxEngine.ini  LinuxEditorPerProjectUserSettings.ini  LinuxEngine.ini  Linux_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/LinuxArm64/: BaseLinuxArm64Engine.ini  LinuxArm64Engine.ini  LinuxArm64_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/Localization/: Category.ini  Editor.ini  Engine.ini  Keywords.ini  PropertyNames.ini  ToolTips.ini
EnrealEngine/UnrealEngine/Engine/Config/Mac/: BaseMacEngine.ini  BaseMacInput.ini  DataDrivenPlatformInfo.ini  MacGame.ini  Mac_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/TVOS/: DataDrivenPlatformInfo.ini  TVOS_SDK.json
EnrealEngine/UnrealEngine/Engine/Config/VulkanPC/: DataDrivenPlatformInfo.ini
EnrealEngine/UnrealEngine/Engine/Config/Windows/: BaseWindowsEngine.ini  BaseWindowsInput.ini  DataDrivenPlatformInfo.ini  WindowsEditorSettings.ini  WindowsInput.ini  Windows_SDK.json
EnrealEngine/UnrealEngine/Engine/Docs/Tutorial_001_RenderingKnowledge/: CLAUDE_REVIEW_PROMPT.md  CONTENT_AUDIT.md  CPP_Knowledge_Index.md  Deep_Generation_Checklist.md  EXPANSION_LOG.md  README.md  SOURCE_INDEX.md  TOPIC_INDEX.md
EnrealEngine/UnrealEngine/Engine/Docs/Tutorial_002_RenderingDeep/: 01_Architecture.md  01_Architecture_CoverageMatrix.md  01_Architecture_TeachingEditReport.md  02_04-13_QualityReview_2026-06-28.md  02_SceneProxy.md  02_SceneProxy_CoverageMatrix.md  02_SceneProxy_TeachingEditReport.md  03_ThreadModel.md  03_ThreadModel_CoverageMatrix.md  03_ThreadModel_TeachingEditReport.md  04_RHI.md  04_RHI_CoverageMatrix.md  04_RHI_TeachingEditReport.md  05_RenderGraph.md  05_RenderGraph_CoverageMatrix.md  05_RenderGraph_TeachingEditReport.md  06_GPUScene.md  (+61 more)
EnrealEngine/UnrealEngine/Engine/Plugins/Experimental/NNERuntimeIREE/Source/ExternalBuild/Source/NNEMlirTools/: CMakeLists.txt
EnrealEngine/UnrealEngine/Engine/Plugins/Experimental/NNERuntimeIREE/Source/ExternalBuild/Source/NNEMlirTools/NNERuntimeIREE/Include/: NNEMlirTools_cxx_api.h
EnrealEngine/UnrealEngine/Engine/Plugins/Experimental/NNERuntimeIREE/Source/ExternalBuild/Source/NNEMlirTools/NNERuntimeIREE/Source/: NNEMlirTools.cpp
EnrealEngine/UnrealEngine/Engine/Programs/UnrealInstrumentation/Compiler/: CMakeLists.txt  CustomMemoryInstrumentation.cpp  CustomMemoryInstrumentation.h  The LLVM Compiler Infrastructure V16.x, V17.x, V18.x, V19.x, V20.x.tps
EnrealEngine/UnrealEngine/Engine/Programs/UnrealInstrumentation/Compiler/cmake/: PatchIfClean.cmake
EnrealEngine/UnrealEngine/Engine/Shaders/: Shaders.Build.cs
EnrealEngine/UnrealEngine/Engine/Source/Runtime/IOS/MarketplaceKitWrapper/: CMakeLists.txt  MarketplaceKitWrapper.swift  build.sh
EnrealEngine/UnrealEngine/Templates/TP_AEC_ArchvisBP/: TP_AEC_ArchvisBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_AEC_BlankBP/: TP_AEC_BlankBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_AEC_CollabBP/: TP_AEC_CollabBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_FirstPerson/: TP_FirstPerson.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_FirstPersonBP/: TP_FirstPersonBP.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_InCamVFXBP/: TP_InCamVFXBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_ME_VProdBP/: TP_ME_VprodBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_MFG_CollabBP/: TP_MFG_CollabBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_MotionDesignBP/: TP_MotionDesignBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_PhotoStudioBP/: TP_PhotoStudioBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_ThirdPerson/: TP_ThirdPerson.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_ThirdPersonBP/: TP_ThirdPersonBP.uproject
EnrealEngine/UnrealEngine/Templates/TP_TopDown/: TP_TopDown.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_TopDownBP/: manifest.json
EnrealEngine/UnrealEngine/Templates/TP_UEIntro_BP/: UEIntro.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_VehicleAdv/: manifest.json
EnrealEngine/UnrealEngine/Templates/TP_VehicleAdvBP/: manifest.json
EnrealEngine/UnrealEngine/Templates/TP_VirtualRealityBP/: TP_VirtualRealityBP.uproject  manifest.json
EnrealEngine/UnrealEngine/Templates/TP_nDisplayBP/: TP_nDisplayBP.uproject
(+55732 files in other folders)
